# voxel_clone

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/shaders/: crosshair.vert  main.frag  main.vert  text.frag  text.vert  world_block.frag  world_block_cutout.frag  world_block_cutout.vert  world_block_normal.frag  world_block_normal.vert
src/: main.cpp
src/client/: CMakeLists.txt
src/client/core/: client.cpp  client.h  game.cpp  game.h  logger.cpp
src/client/core/input/: input.cpp  input.h  input_handler.cpp  input_handler.h
src/client/core/window/: window.cpp  window_callbacks.cpp
src/client/ecs/components/: mass.h  player_tag.h
src/client/ecs/core/: entity.h
src/client/ecs/systems/: camera_update_system.h  spectator_movement_system.h  world_collision_system.h
src/client/ecs/systems/utils/: collider_vs_block.h  collider_vs_world.h
src/client/net/: enet_context.cpp  net_client.cpp  net_client.h
src/client/render/: camera.hpp  render.cpp  render.h
src/client/render/graphics/: mesh.cpp  mesh.h  render_params.cpp  render_params.h  shader.cpp  text.cpp  texture2D.cpp  texture_atlas.cpp
src/client/ui/: debug_overlay.cpp  debug_overlay.h  frame_counter.cpp  frame_counter.h  ui.cpp  ui.h
src/client/ui/elements/: container.h  text.cpp
src/client/utils/: circle_around_point.cpp  circle_around_point.h
src/client/utils/resource/: font.cpp  font.h  loader.cpp  resources.cpp  resources.h
src/client/world/: client_world.cpp  client_world.h  server_world.h  world.cpp  world.h
src/client/world/block/: block_list.h
src/client/world/chunk/: chunk.cpp  chunk.h  chunk_storage.cpp  chunk_storage.h  client_chunk.cpp  client_chunk.h  mesh_generator.cpp  mesh_generator.h
src/client/world/chunk/mesh_models/: cross.cpp
src/client/world/events/: client_events.cpp  client_events.h
src/client/world/generation/: bedrock_generator.cpp  biome.hpp  canyon_generator.cpp  perlin_2d.cpp  rivers_generator.cpp  temperature_generator.cpp  terrain_generator.cpp  world_generator.cpp  world_generator.h
src/client/world/lighting/: lightmap.h
src/client/world/world/: world_event.h  world_event_list.cpp  world_event_list.h  world_event_manager.cpp  world_event_manager.h
src/core/: CMakeLists.txt  game.cpp  game.h  input.cpp  input_handler.cpp  input_handler.h  loader.cpp  logger.cpp  logger.h  resources.cpp  resources.h  stb_image_impl.cpp  time.h  window.cpp  window.h  window_callbacks.cpp
src/core/include/core/: constants.h  time.hpp
src/core/include/core/ecs/components/: player_input.h
src/core/include/core/ecs/core/: ecs.h
src/core/include/core/ecs/systems/: creative_movement_system.h  gravity_system.h  player_collider_system.h  spectator_movement_system.h  survival_movement_system.h  world_collision_system.h
src/core/include/core/ecs/systems/utils/: collider_vs_block.h  collider_vs_world.h
src/core/include/core/net/: client_to_server.hpp  packet.h  packet_buffer.hpp  server_to_client.hpp
src/core/include/core/world/: world.h
src/core/include/core/world/block/: block.h  block_data.h  block_list.h
src/core/include/core/world/chunk/: chunk.h  chunk_storage.h
src/core/include/core/world/events/: base_events.h
src/core/input/: input.cpp  input.h  input_handler.cpp  input_handler.h
src/core/net/: packet_factory.cpp
src/core/window/: window.cpp  window.h  window_callbacks.cpp  window_events.cpp
src/core/world/: world.cpp
src/core/world/block/: block.cpp
src/core/world/chunk/: chunk.cpp  chunk_storage.cpp
src/core/world/events/: base_events.cpp  world_event_manager.cpp
src/ecs/components/: collider.h  movement.h  physics_state.h  player_camera.h  player_mode.h  transform.h  velocity.h
src/ecs/core/: component_storage.h  ecs.h  view.h
src/ecs/systems/: creative_movement_system.h  gravity_system.h  player_camera_system.h  player_collider_system.h  player_movement_system.h  player_systems_manager.h  spectator_movement_system.h  survival_movement_system.h  world_collision_system.h
src/ecs/systems/utils/: collider_vs_block.h  collider_vs_world.h
src/network/: enet_context.h
src/network/client/: client.cpp  client.h
src/network/server/: server.cpp  server.h
src/render/: camera.hpp  render.cpp  render.h  shader.cpp  texture2D.cpp  texture2D.h  texture_atlas.cpp  texture_atlas.h
src/render/graphics/: mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  shader.cpp  shader.h  text.cpp  text.h  texture2D.cpp  texture_atlas.cpp  texture_atlas.h
src/server/: CMakeLists.txt  main.cpp
src/server/core/: server.cpp  server.h
src/server/net/: enet_context.h  net_server.cpp  net_server.h
src/server/world/: server_world.cpp  server_world.h
src/server/world/events/: server_events.cpp  server_events.h
src/server/world/generation/: biome.hpp  rivers_generator.cpp  terrain_generator.cpp  world_generator.cpp  world_generator.h
src/ui/: debug_overlay.cpp  debug_overlay.h  frame_counter.cpp  ui.cpp  ui.h
src/ui/elements/: base_element.cpp  base_element.h  container.h  crosshair.cpp  crosshair.h  horizontal_layout.h  text.cpp  text.h  vertical_layout.h
src/utils/resource/: font.cpp  font.h  loader.cpp  loader.h  resources.cpp  resources.h
src/world/: biome.hpp  block.cpp  block.h  chunk.cpp  chunk.h  chunk_storage.h  mesh_generator.cpp  mesh_generator.h  perlin_2d.cpp  perlin_2d.h  world.cpp  world.h  world_generator.cpp  world_generator.h
src/world/block/: block_data.h  block_list.h
src/world/chunk/: chunk.cpp  chunk.h  mesh_generator.cpp  mesh_generator.h
src/world/chunk/mesh_models/: cube.cpp  layer.cpp  slab.cpp
src/world/generation/: bedrock_generator.cpp  biome.hpp  canyon_generator.cpp  perlin_2d.cpp  perlin_2d.h  rivers_generator.cpp  terrain_generator.cpp  world_generator.cpp  world_generator.h
src/world/lighting/: light.h  lightmap.h
src/world/world/: world_event.h  world_event_list.cpp  world_event_list.h  world_event_manager.cpp  world_event_manager.h
